# OP-TEE_Wallet

./: .gitignore  README.md  test.txt
optee_examples/TA_Manager/: Android.mk  CMakeLists.txt
optee_examples/TA_Manager/host/: Makefile  main.c
optee_examples/TA_Manager/ta/: Android.mk  Makefile  manager_ta.c  sub.mk  user_ta_header_defines.h
optee_examples/concurrency_test/: CMakeLists.txt
optee_examples/concurrency_test/host/: Makefile  main.c
optee_examples/concurrency_test/ta/: Makefile  hello_world_ta.c  trusted_authority_ta.c  user_ta_header_defines.h
optee_examples/concurrency_test/ta/include/: hello_world_ta.h  trusted_authority_ta.h  user_ta_header_defines.h
optee_examples/encryp_decrypt/: Android.mk  CMakeLists.txt
optee_examples/key_generation/: Android.mk  CMakeLists.txt
optee_examples/schnorr_sFS_izkp/: Android.mk  CMakeLists.txt
optee_examples/schnorr_sFS_nizkp/: Android.mk  CMakeLists.txt
optee_examples/sd-jwt-parser/: Android.mk  CMakeLists.txt
optee_examples/storage_data/: Android.mk  CMakeLists.txt
optee_examples/test_passt/: Android.mk  CMakeLists.txt
optee_examples/trusted_authority/: Android.mk  CMakeLists.txt
python_server/: demo.sh  verifier.py
shared/: capture1.pcapng  client.py  client_wallet.py  fichier_test.txt  passt.py  script_IZKP.py  server.py  test.py
shared/schnorr_verification/: ree_client.py  schnorr_crypto.py  schnorr_verif.py
shared/sd_jwt/: client.py  cni_token.tmp  covid_cert_token.tmp  generate_key.py  issuer.py  issuer_private_key.json  issuer_public_key.json  templates.py  verifier.py
(+70 files in other folders)
